# Data-Structures-Project_3-Search-Engine

./: .gitignore  CMakeLists.txt  README.md  diagram.md  uml.txt
build_final/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  financial_index.orgs  financial_index.persons  financial_index.words  sample_index.orgs  sample_index.persons  sample_index.words
include/: AVLTree.h  DocumentParser.h  IndexHandler.h  QueryProcessor.h  UserInterface.h
src/: DocumentParser.cpp  IndexHandler.cpp  QueryProcessor.cpp  UserInterface.cpp  main.cpp
test/: test_avltree.cpp
